--- a/D42_Consolidation_info/vhost/httpd.conf
+++ b/D42_Consolidation_info/vhost/httpd.conf
@@ -247,7 +247,7 @@ ServerAdmin you@example.com
 #
 <Directory />
     AllowOverride none
-    Require all denied
+    Require all granted
 </Directory>
 
 #
@@ -276,7 +276,7 @@ DocumentRoot "/usr/local/apache2/htdocs"
     # http://httpd.apache.org/docs/2.4/mod/core.html#options
     # for more information.
     #
-    Options Indexes FollowSymLinks
+    Options -Indexes +FollowSymLinks
 
     #
     # AllowOverride controls what directives may be placed in .htaccess files.
@@ -296,7 +296,7 @@ DocumentRoot "/usr/local/apache2/htdocs"
 # is requested.
 #
 <IfModule dir_module>
-    DirectoryIndex index.html
+    DirectoryIndex index.php index.html
 </IfModule>
 
 #
@@ -434,7 +434,8 @@ LogLevel warn
     #
     AddType application/x-compress .Z
     AddType application/x-gzip .gz .tgz
-
+    Addtype application/x-httpd-php .php
+    Addhandler application/x-httpd-php .php
     #
     # AddHandler allows you to map certain file extensions to "handlers":
     # actions unrelated to filetype. These can be either built into the server
